--- a/app/globals.css
+++ b/app/globals.css
@@ -1,16 +1,18 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap&subset=cyrillic');
 @import "tailwindcss";
 
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  font-family: 'Inter', Arial, Helvetica, sans-serif;
 }
 
-@theme inline {
+/* @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
-}
+} */
 
 @media (prefers-color-scheme: dark) {
   :root {
@@ -21,8 +23,9 @@
 
 body {
   background: var(--background);
-  color: var(--foreground);
-  font-family: Helvetica, sans-serif;
+  color: var(--foreground); 
+  font-family: 'Inter', Arial, Helvetica, sans-serif;
+  font-weight: 500;
 }
 
 .center-content {
