--- a/app/globals.css
+++ b/app/globals.css
@@ -1,18 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap&subset=cyrillic');
+@import url('https://fonts.googleapis.com/css2?family=Orelega+One&display=swap');
 @import "tailwindcss";
 
 :root {
   --background: #ffffff;
   --foreground: #171717;
-  font-family: 'Inter', Arial, Helvetica, sans-serif;
+  --secondary-foreground: bg-neutral-900/80;
+  font-family: "Orelega One", 'Inter', Arial, Helvetica, sans-serif;
 }
-
-/* @theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-} */
 
 @media (prefers-color-scheme: dark) {
   :root {
@@ -24,24 +19,5 @@
 body {
   background: var(--background);
   color: var(--foreground); 
-  font-family: 'Inter', Arial, Helvetica, sans-serif;
-  font-weight: 500;
 }
 
-.center-content {
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center; 
-  align-items: center;     
-}
-
-h1 {
-  font-size: 5rem;
-  font-weight: bold;
-}
-
-p {
-  font-size: 1.5rem;
-  margin-top: 1rem;
-}
