--- a/app/globals.css
+++ b/app/globals.css
@@ -2,75 +2,21 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap&subset=cyrillic');
 @import "tailwindcss";
 
-:root {
+
+@theme {
   --background: #000000;
   --foreground: #ffffff;
   --secondary: #666666;
-  --accent: rgba(250, 142, 0, 0.1);
+  --color-accent: #0fa4e6;
   --input-bg: rgba(0, 0, 0, 0.8);
-  font-family: 'Inter', system-ui, -apple-system, sans-serif;
-  font-weight: 600;
+
 }
 
 body {
-  /* background: radial-gradient(circle at 50% 50%, #301f0d 0%, #000000 100%); */
   background: var(--background);
   color: var(--foreground);
   min-height: 100vh;
   overflow-x: hidden;
-}
-
-::selection {
-  background: var(--accent);
-  color: var(--foreground);
-}
-
-.glow-effect {
-  position: absolute;
-  width: 150%;
-  height: 150%;
-  background: radial-gradient(circle at 50% 0%, var(--accent), transparent 70%);
-  transform: translateY(-25%);
-  pointer-events: none;
-  z-index: 0;
-}
-
-@keyframes slideRollIn {
-  0% {
-    transform: translateX(-20px) rotateX(-90deg);
-    opacity: 0;
-    width: 0;
-    margin-left: 0;
-  }
-  30% {
-    width: var(--expanded-width);
-    margin-left: 0.5rem;
-  }
-  100% {
-    transform: translateX(0) rotateX(0);
-    opacity: 1;
-    width: var(--expanded-width);
-    margin-left: 0.5rem;
-  }
-}
-
-@keyframes scroll {
-  0% {
-    transform: translateX(0);
-  }
-  100% {
-    transform: translateX(-50%);
-  }
-}
-
-.animate-scroll {
-  animation: scroll 30s linear infinite;
-}
-
-.animate-scroll:hover {
-  animation-play-state: paused;
-}
-
-.animated-appearance {
-  animation: expandAppear 0.6s cubic-bezier(0.34, 1.56, 0.64, 1);
+  font-family: 'Inter', system-ui, -apple-system, sans-serif;
+  font-weight: 600;
 }
